tests/check/illegal_mutables.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ void foo(int a, f32 [2] aa) {
  b = {1, 2};
  c = 3;
  d : [a, 3];
  mutable e = 3;

  f : [a, b(1), 5, e];
  g = {a, b(2), e + 3};
  h : d + b + e;

  with i in [a, e] { }
  foreach j in e {}
  foreach j in [e] {}
  
  k = aa.span_as([e]);
  parallel by 1 with l in [8] call bar(aa.chunk(e).at(l));

  c += 1;
  c -= 1;
  c *= 1;
  c /= 1;
  c %= 1;
  e += 1;
  e -= 1;
  e *= 1;
  e /= 1;
  e %= 1;
  foreach m in [a] {
    aa.at(m) += 1.0f;
    aa.at(m) -= 1.0f;
    aa.at(m) *= 1.0f;
    aa.at(m) /= 1.0f;
    aa.at(m) %= 1.0f;
//    aa.at(m) %= 1; TODO: type promotion
  }
}

// CHECK: error: mutable values can not be used for the ituple declaration.
// CHECK: error: mdspan/ituple can not be initialized with mutable values.
// CHECK: error: only mutables can be re-assigned (c).
// CHECK: error: only mutables can be re-assigned (c).
// CHECK: error: only mutables can be re-assigned (c).
// CHECK: error: only mutables can be re-assigned (c).
// CHECK: error: only mutables can be re-assigned (c).
// CHECK: Totally 7 errors have been detected.
